overflow fix

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 
-
+html{
+    overflow-x: hidden;
+}
 body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
